# Authorization-service

./: .env  Cargo.toml  Dockerfile  Makefile  README.md  api.yaml  docker-compose.yml  sqlx-data.json  startup.txt
LifeCreatorBackend/: .editorconfig  Dockerfile  LifeCreatorBackend.csproj  LifeCreatorBackend.sln  Program.cs  appsettings.json  docker-compose.prod.yml  docker-compose.yml  secrets-sheme.json
LifeCreatorBackend/AuthenticationService/: AuthenticationService.csproj  Dockerfile
LifeCreatorBackend/Models/: User.cs  (+1 more)
auth_service/: Cargo.toml  Dockerfile  sqlx-data.json
core_service/: Cargo.toml  Dockerfile  sqlx-data.json
core_service/database_schema/: lifesimdb.sql  test_data.sql
core_service/src/: error.rs  main.rs
core_service/src/database/: generation.rs  mod.rs
core_service/src/database/cell/: mod.rs  module.rs
core_service/src/database/cell/intellect/: gen.rs  mod.rs  neuron.rs
core_service/src/database/diff/: created.rs  mod.rs  module_changed.rs  removed.rs
core_service/src/rest_api/: mod.rs
core_service/src/rest_api/creation_variants/: mod.rs
core_service/src/rest_api/generation/: change_name_description.rs  create.rs  delete.rs  get.rs  get_time.rs  mod.rs  patch.rs  remove.rs
core_service/src/rest_api/generation/cells/: get.rs  patch.rs
core_service/src/rest_api/generation/ticks/: get.rs  mod.rs  post.rs
core_service/src/rest_api/generation/time/: get.rs
core_service/src/rest_api/generations/: get.rs  mod.rs  post.rs
database_schema/: lifesimdb.sql  test_data.sql
src/: error.rs  mail.rs  main.rs  server_state.rs
(+140 files in other folders)
